# mobile_recognition

./: .gitignore  Dockerfile  README.md  claude.md  requirements.txt
mobile/: IMPLEMENTATION_SUMMARY.md  VERIFICATION_REPORT.md  requerimientos
mobile/image_recognition/: .gitignore  README.md  ffigen.yaml  pubspec.yaml
mobile/image_recognition/android/: build.gradle
mobile/image_recognition/example/: pubspec.yaml
mobile/image_recognition/example/assets/image_recognition/: README.md  runtime_config.json
mobile/image_recognition/ios/: image_recognition.podspec
mobile/image_recognition/native/: CMakeLists.txt
mobile/image_recognition/native/include/: image_recognition.h
mobile/image_recognition/native/src/: config_parse.cpp  image_decode_stb.cpp  image_preprocess.cpp  image_recognition.cpp  softmax.cpp  timing.cpp
scripts/: run_in_docker.sh  smoke_test.sh
trainer/: cli.py  config.py  requerimientos_trainer
trainer/data/: dataset_scan.py  preprocess.py  split.py  tfdata.py
trainer/eval/: calibration.py  confusion_matrix.py  metrics.py  tflite_runner.py  threshold.py
trainer/models/: distiller.py  student.py  teacher.py
trainer/quant/: qat.py  rep_dataset.py  tflite_export.py
trainer/utils/: io.py  logging.py  seed.py  versioning.py
